# jira-mcp

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  server.py
lib/: jira.py
