[project]
name = "jira-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-ai-generativelanguage==0.6.6",
    "google-generativeai==0.7.2",
    "langchain-google-genai>=2.0.0",
    "langchain-ollama==0.2.0",
    "mcp[cli]>=1.6.0",
    "nltk==3.9.1",
    "numpy==1.26.4",
    "ollama==0.3.2",
    "pandas==2.2.1",
    "pymonad==2.4.0",
    "streamlit==1.35.0",
    "tabulate==0.9.0",
]
